--- a/_posts/2016-04-12-rpc.markdown
+++ b/_posts/2016-04-12-rpc.markdown
@@ -106,6 +106,7 @@ Modern day RPC mechanisms.</p></li>
 </blockquote>
 <h4 id="the-two-army-problem">The Two Army Problem</h4>
 <p>How do we handle requesting irreplaceable data? (or, more generally have two servers come to agreement that some RPC was successfully executed and the response received.) Well, we can acknowledge the receipt of that information, but then we would also have to acknowledge the acknowledgements to be sure the acknowledgement was delivered, right? This topic, central to the agreement problem, has been discussed extensively in distributed systems literature <span class="citation">Halpern and Moses (1990)</span>.</p>
+<h4 id="parameters">Parameters</h4>
 <p>Tanenbaum and van Renesse discuss the problem of parameter passing and parameter marshalling. This issue becomes exacerbated with references in object systems such as CORBA, where specific distributed references have to be used to ensure they remain valid over time.</p>
 <blockquote>
 <p>“However, if there are reference parameters or pointers, things are more complicated. While it is obviously possible to copy pointers into the message, when the server tries to use them, it will not work correctly because the object pointed to will not be present.”</p>
@@ -113,7 +114,8 @@ Modern day RPC mechanisms.</p></li>
 <p>...</p>
 <p>“The other solution is just to pass the pointer itself. Every time the pointer is used, a message is sent back to the client to read or write the relevant word. The problem here is that we violate one of the basic rules: the compiler should not have to know that it is dealing with RPC. Normally the code produced for reading from a pointer is just to indirect from it. If remote pointers work differently from local pointers, the transparency of the RPC is lost.”</p>
 </blockquote>
-<p>Finally, they highlight the problem of exactly-once semantics and the power of idempotence.</p>
+<h4 id="idempotence">Idempotence</h4>
+<p>Finally, the authors highlight the problem of providing exactly-once semantics across the network and the power of idempotence. Tanenbaum and van Renesse say it very conciesly.</p>
 <blockquote>
 <p>“Suppose a client does a nonidempotent RPC and the server crashes one machine instruction after finishing the operation, but before the server stub has had a chance to reply. The client stub times out and sends the request again. If the server has rebooted by then, there is a chance that the operation will be performed two or more times and thus fail.”</p>
 </blockquote>
